Implementacion de la seguridad acceso al 80%

--- a/src/main/webapp/pages/mantEquipo.xhtml
+++ b/src/main/webapp/pages/mantEquipo.xhtml
@@ -1,21 +1,17 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
+                xmlns:h="http://java.sun.com/jsf/html"
+                xmlns:f="http://java.sun.com/jsf/core"
+                xmlns:ui="http://java.sun.com/jsf/facelets"
+                xmlns:p="http://primefaces.org/ui"
+                xmlns:pe="http://primefaces.org/ui/extensions"
+                xmlns:fn="http://java.sun.com/jsp/jstl/functions"
+                template="/template/esqueleto.xhtml" >
 
-<html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:p="http://primefaces.org/ui"
-	xmlns:c="http://java.sun.com/jsp/jstl/core"
-	xmlns:fn="http://java.sun.com/jsp/jstl/functions">
-<h:head>
-	<link type="text/css" rel="stylesheet"
-		href="#{request.contextPath}/resources/tema.css" />
-	<link type="text/css" rel="stylesheet"
-		href="#{request.contextPath}/resources/css/estiloMant.css" />
-</h:head>
 
-<h:body>
-	<h:form id="form">
+
+<ui:define name="content">
+
+    <h:form id="form">
 
 		<p:growl id="growl" showDetail="true" life="3000" />
 
@@ -58,16 +54,6 @@
 		</p:dialog>
 
 		<p:panel>
-
-			<f:facet name="header">
-
-				<p:commandButton styleClass="back" value="Regresar"	icon="ui-icon-circle-arrow-w" action="menuPrincipal" ajax="false" />
-				<p id="par">Mantenimiento de Equipos</p>
-
-				<div id="reloj">
-					<p:clock pattern="HH:mm:ss - dd / MM / yyyy" />
-				</div>
-			</f:facet>
 
 			<div id="cuerpo">
 
@@ -216,8 +202,7 @@
 
 	</h:form>
 
+</ui:define>
 
-</h:body>
 
-
-</html>
+</ui:composition>
