Estilo Login y mant terminados.

--- a/src/main/webapp/pages/mantCategoria.xhtml
+++ b/src/main/webapp/pages/mantCategoria.xhtml
@@ -37,7 +37,7 @@
 			</h:panelGrid>
 		</p:dialog>
 
-		<p:panel>
+		<p:panel styleClass="panel">
 			<span class="mantenimiento">CATEGORÍA</span>
 			<div id="cuerpo">
 
