--- a/src/main/webapp/pages/menuPrincipal.xhtml
+++ b/src/main/webapp/pages/menuPrincipal.xhtml
@@ -11,15 +11,12 @@
         <!-- 
             <p:panel styleClass="panelMenu"> -->
             <div class="divMenu">
+            	
 				<p:dock position="top" proximity="90" maxWidth="40" styleClass="dock" align="center">  
-				    <p:menuitem value="Home" icon="/resources/images/ruquLogo.png" url="#"/>  
-				    <p:menuitem value="Music" icon="/resources/images/ruquLogo.png" url="#"/>  
-				    <p:menuitem value="Video" icon="/resources/images/ruquLogo.png" url="#"/>  
-				    <p:menuitem value="Email" icon="/resources/images/ruquLogo.png" url="#"/>  
-				    <p:menuitem value="Portfolio" icon="/resources/images/ruquLogo.png" url="#"/>  
-				    <p:menuitem value="Link" icon="/resources/images/ruquLogo.png" url="#"/>  
-				    <p:menuitem value="RSS" icon="/resources/images/ruquLogo.png" url="#"/>  
-				    <p:menuitem value="History" icon="/resources/images/ruquLogo.png" url="#"/>  
+				    <p:menuitem styleClass="botonMenu" value="COMPRAS" icon="/resources/images/compra.png" url="#"/>  
+				    <p:menuitem styleClass="botonMenu" value="INVENTARIO" icon="/resources/images/ruquLogo.png" url="#"/>  
+				    <p:menuitem styleClass="botonMenu" value="PERSONAL" icon="/resources/images/ruquLogo.png" url="#"/>  
+				    <p:menuitem styleClass="botonMenu" value="PROYECTO" icon="/resources/images/ruquLogo.png" url="#"/>  
 				</p:dock>  
 			</div>
 			<!--  </p:panel> -->
