--- a/src/main/webapp/pages/Compras/mantProveedor.xhtml
+++ b/src/main/webapp/pages/Compras/mantProveedor.xhtml
@@ -135,7 +135,7 @@
 								</div>
 							</f:facet>
 							<f:facet name="input">
-								<p:selectOneMenu widgetVar="distrito" value="#{c.distrito}" converter="omnifaces.SelectItemsConverter" >
+								<p:selectOneMenu widgetVar="distrito" value="#{c.distrito}" converter="omnifaces.SelectItemsConverter"  style="width:100%; text-align:center;">
 									<f:selectItem itemLabel="Seleccione uno" itemValue="#{null}" noSelectionOption="true" /> 
 									<f:selectItems value="#{ProveedorBean.distritos}" var="dist" itemLabel="#{dist.distrito}" itemValue="#{dist}" /> 
 								</p:selectOneMenu>
