Edicion de Cant de Equipos Asignados a Proyecto

--- a/src/main/webapp/pages/Proyecto/mantProyecto.xhtml
+++ b/src/main/webapp/pages/Proyecto/mantProyecto.xhtml
@@ -335,7 +335,7 @@
 						
 						<p:commandButton id="viewEditarGastos" styleClass="botonPeque"
 							value="Editar Gastos" icon="ui-icon-search" process="@form:datatablecampana"
-							update=":form:displayPresupuesto, :form:growl" title="Editar Gastos: Personal/Equipos/Otros"
+							update=":form:tabsGastos, :form:growl" title="Editar Gastos: Personal/Equipos/Otros"
 							actionListener="#{ProyectoBean.gastoEvent}" />
 
 					</f:facet>
