--- a/src/main/webapp/pages/Inventario/mantCategoria.xhtml
+++ b/src/main/webapp/pages/Inventario/mantCategoria.xhtml
@@ -46,7 +46,7 @@
 					<pe:keyFilter regEx="/[a-z0-9 ]/i"/>
 				</p:inputText>
 				<div></div>
-				<p:commandButton value="#{CategoriaBean.etiBotonDialog()}"
+				<p:commandButton value="#{CategoriaBean.etiBotonDialog()}" process="display,@this"
 					actionListener="#{CategoriaBean.procesarDialog}" oncomplete="handleComplete(xhr, status, args);"
 					update="@form:datatablecampana, growl, @form:display" />
 
@@ -76,7 +76,10 @@
 						<p:commandButton id="EliminarRegistro" styleClass="botonPeque"
 							value="Eliminar" icon="ui-icon-closethick"
 							update=":form:display, :form:growl" process="datatablecampana,@this"
-							actionListener="#{CategoriaBean.eliminarEvent}" />
+							actionListener="#{CategoriaBean.eliminarEvent}" >
+							<p:confirm header="Confirmación" message="¿Seguro desea eliminar el registro?" 
+						    		icon="ui-icon-alert" /> 
+						</p:commandButton>
 
 					</f:facet>
 					
@@ -91,7 +94,10 @@
 						    	</p:commandButton>
 						    	<p:commandButton id="eliminar" icon="ui-icon-trash" styleClass="botonOpcion" 
 						    	update=":form:display, :form:growl" actionListener="#{CategoriaBean.eliminarEvent}"
-						    	process="datatablecampana,@this"/>
+						    	process="datatablecampana,@this">
+						    		<p:confirm header="Confirmación" message="¿Seguro desea eliminar el registro?" 
+						    		icon="ui-icon-alert" /> 
+						    	</p:commandButton>
 							</h:panelGrid>
 						</f:facet>
 						
@@ -134,27 +140,10 @@
 		
 		<p:remoteCommand name="showError" actionListener="#{CategoriaBean.showError}" immediate="true" />
 
-		<p:dialog id="modalDialog" header="CONFIRMACION" widgetVar="dlg2"
-			modal="true" height="150" width="400" closable="false"
-			resizable="false">
-			<p:messages id="messages" showDetail="true" autoUpdate="true"
-				closable="false" />
-			<p:commandButton value="OK" onclick="dlg2.hide()" />
-		</p:dialog>
-
-		<p:confirmDialog id="confirmDialog"
-			message="¿Esta seguro de esta accion?" header="Eliminar Registro"
-			severity="alert" widgetVar="confirmation">
-
-			<p:commandButton id="confirm" value="Si"
-				update=":form:datatablecampana, growl"
-				oncomplete="confirmation.hide()"
-				actionListener="#{CategoriaBean.validarEliminar}" />
-			<p:commandButton id="decline" value="No"
-				onclick="confirmation.hide()" type="button" />
-
-		</p:confirmDialog>
-
+		<p:confirmDialog global="true" showEffect="fade" hideEffect="explode">  
+	        <p:commandButton value="Si" type="button" styleClass="ui-confirmdialog-yes" icon="ui-icon-check"/>  
+	        <p:commandButton value="No" type="button" styleClass="ui-confirmdialog-no" icon="ui-icon-close"/>       
+    	</p:confirmDialog>   
 	</h:form>
 
  </ui:define>
