--- a/src/main/webapp/pages/Inventario/mantEquipo.xhtml
+++ b/src/main/webapp/pages/Inventario/mantEquipo.xhtml
@@ -193,7 +193,7 @@
 		
 					<p:commandButton id="confirm" value="Si"
 						update=":form:datatablecampana, growl"
-						oncomplete="confirmation.hide()"
+						oncomplete="confirmation.hide()" process="@form:datatablecampana"
 						actionListener="#{EquipoBean.validarEliminar}" />
 					<p:commandButton id="decline" value="No"
 						onclick="confirmation.hide()" type="button" />
